--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -129,12 +129,12 @@ Micah C. Chambers
 \end{center}
 
 Traditional methods of analyzing FMRI images use a linear combination of
-just a few static regressors. This works demonstrates an alternative
+just a few static regressors. This work demonstrates an alternative
 approach using a physiologically inspired nonlinear model. By using a 
 particle filter to optimize the model parameters, the computation time
 is kept below a minute per voxel without requiring a linearization 
 of the noise in the state
-variables. The activation results show regions similar those found in 
+variables. The activation results show regions similar to those found in 
 SPM; however, there are some notable regions not detected by 
 SPM. Though the parameters selected by the particle filter based approach
 are more than sufficient to predict the BOLD response,
@@ -146,8 +146,8 @@ than a single estimate. Because the output of the particle filter is
 a full posterior probability, the reliance on the mean to estimate 
 parameters is unnecessary. This work presents
 not just a viable alternative to the traditional method of detecting
-activation, but an extensible technique of estimating the joint Probability
-Distribution Function of the BOLD parameters.
+activation, but an extensible technique of estimating the joint probability
+distribution function of the BOLD parameters.
 
 \vfill
 
