--- a/doc/paper/main.tex
+++ b/doc/paper/main.tex
@@ -73,8 +73,8 @@ than a single estimate. Because the output of the particle filter is
 a full posterior probability, the reliance on the mean to estimate 
 parameters is unnecessary. This work presents
 not just a viable alternative to the traditional method of detecting
-activation, but an extensible technique of estimating the joint Probability
-Distribution Function of the BOLD parameters.
+activation, but an extensible technique of estimating the joint probability
+distribution of the BOLD parameters.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
@@ -92,8 +92,8 @@ BOLD Response, FMRI, Nonlinear Systems, Particle Filter, Bayesian Statistics, Sy
 % creates the second title. It will be ignored for other modes.
 \IEEEpeerreviewmaketitle
 
-
 \section{Introduction}
+\label{sec:Introduction}
 % The very first letter is a 2 line initial drop letter followed
 % by the rest of the first word in caps.
 % 
@@ -109,12 +109,46 @@ BOLD Response, FMRI, Nonlinear Systems, Particle Filter, Bayesian Statistics, Sy
 % 
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
-\IEEEPARstart{T}{his} demo file is intended to serve as a ``starter file''
-for IEEE journal papers produced under \LaTeX\ using
-IEEEtran.cls version 1.7 and later.
-% You must have at least 2 lines in the paragraph with the drop letter
-% (should never be an issue)
-I wish you the best of success.
+\IEEEPARstart{T}{raditional} methods of analyzing 
+Functional Magnetic Resonance Imaging (FMRI)
+time series perform regression using a linear 
+combination of static explanatory variables. 
+In this paper I will demonstrate the use of the Particle 
+Filters as a means of estimating the governing parameters of the 
+nonlinear BOLD model at a computation cost 
+that would still allow real time calculations for multiple voxels.
+Practically, this paper presents an alternative
+to detecting neural activity from the traditionally
+used Statistical Parametric Mapping (SPM). Though more computationally intense,
+this method is capable of modeling nonlinear effects, 
+and provides significantly more detailed output. 
+By using a separate particle filter for each single time series it 
+is possible to estimate parameters and make real-time predictions
+for small neural regions, a feature which could be useful towards real time FMRI 
+\cite{DeCharms2005}. Future works will also benefit from the ability to 
+apply conditions to the posterior distribution in post-processing without
+recalculating parameters; for instance to impose additional 
+physiological
+constraints. Modeling the BOLD (Blood-Oxygen-Level-Dependent) response 
+as a nonlinear system is the
+best way to determine the correlation of stimulus sequence with the BOLD
+response; yet in the past doing this on a large scale has been far too
+computationally taxing. The solution used here takes approximately 40 seconds
+for a single 5 minute time series (with Core 2 Duo Q6600). 
+
+%This article is organized as follows. The rest of the introduction will
+%overview similar efforts and discuss their strengths ans weaknesses.
+%\autoref{sec:Bold Model} will describe the genesis of the BOLD model,
+%and its current state. \autoref{sec:Particle Filter} will explain the 
+%particle filter and how it is being used in this case. 
+%\auroref{sec:Methods} will describe in detail the experimental
+%design, algorithm set up, and the preprocessing that was applied
+%for the particle filter algorithm.
+%The results are explored separately for simulated data
+%and real FMRI data in \autoref{sec:SimulationResults} and 
+%\autoref{sec:RealData}, respectively. 
+%In \autoref{sec:Discussion} the results and their implications 
+%for future works are interpreted. 
 
 \appendices
 \section{Particle Filter Algorithm}
