added a frame where the graphs of the timeseries will go

--- a/doc/presentation/main.tex
+++ b/doc/presentation/main.tex
@@ -79,6 +79,10 @@ Parameter Estimation using Sequential Monte Carlo Methods}
         which are a function of Volume and Oxygenation.}
 \end{frame}
 
+\begin{frame}{Time Changing Parameters}
+    \note{Should include a picture of the different parts of the BOLD signal}
+\end{frame}
+
 \begin{frame}{BOLD State Equations}
   \begin{itemize}
     \item Flow Inducing Signal
