got multihead working and added a script to start the show

--- a/doc/presentation/main.tex
+++ b/doc/presentation/main.tex
@@ -1,8 +1,9 @@
 %Micah Chambers
 
 \documentclass{beamer}
+\usepackage{pgfpages}
 %\usepackage[orientation=landscape,size=custom,width=16,height=10,scale=0.5]{beamerposter} 
-%\setbeameroption{show notes on second screen}
+\setbeameroption{show notes on second screen}
 
 \mode<presentation>
 {
