--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -316,7 +316,7 @@ the one performed in this work \cite{Hu2009}.
 \begin{figure}
 \includegraphics[width=16cm]{images/kalman}
 %\includegraphics[trim=6cm .75cm 6cm .75cm,width=16cm]{images/gauss_step_point1sec_3sigma.pdf}
-\caption{Example updates of a distribution using the Kalman Filter, \cite{Thrun2005}}
+\caption{Example updates of a distribution using the Kalman Filter.}
 \label{fig:EKFWorking}
 \end{figure}
 
@@ -444,7 +444,8 @@ will be discussed in \autoref{sec:PriorDist} \cite{Johnston2008, Friston2000}.
 
 In Vakorin et al., a combination of Genetic Algorithms and Simulated Annealing were
 used to estimate not only the parameters, but the true stimuli driving the BOLD
-signal. This addresses the inherent uncertainty of exactly where and when 
+signal \cite{Vakorin2007}. 
+This addresses the inherent uncertainty of exactly where and when 
 stimuli actually get applied. Unfortunately this algorithm was extremely slow.
 
 \subsection{Previous Particle Filter Approaches}
